syntax = "proto3";

package api.search.v1;
import "google/api/annotations.proto";
option go_package = "search-product/api/search/v1;v1";
option java_multiple_files = true;
option java_package = "api.search.v1";

service Search {
	rpc MustSearch (MustSearchRequest) returns (MustSearchReply){
		option (google.api.http) = {
			post: "/search/must"
			body: "*"
		};
	}
}

message Product {
	string name = 1;
	float price = 2;
	int64 group = 3;
}

message MustSearchRequest {
		Product product = 1;
}
message MustSearchReply {
	repeated Product product = 1;
}
